# sonictok

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
bench/: BASELINE.md
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_sonictok.py
crates/sonictok/: Cargo.toml
crates/sonictok-cabi/: Cargo.toml
crates/sonictok-cabi/include/: sonictok.h
crates/sonictok-cabi/src/: lib.rs
crates/sonictok-cabi/test/: test_cabi.c
crates/sonictok-core/: Cargo.toml
crates/sonictok-core/src/: bpe.rs  encoding.rs  hash.rs  lib.rs  rank.rs  specials.rs  vocab.rs
crates/sonictok-core/src/pretok/: cl100k.rs  common.rs  mod.rs  o200k.rs
crates/sonictok-core/src/unicode/: mod.rs  tables.rs
crates/sonictok-data/: Cargo.toml
crates/sonictok-data/src/: blob.rs  error.rs  lib.rs
crates/sonictok-testkit/: Cargo.toml
crates/sonictok-testkit/src/: corpora.rs  lib.rs  oracle.rs
crates/sonictok/benches/: encode.rs
crates/sonictok/examples/: perfbench.rs  profile.rs
crates/sonictok/src/: error.rs  lib.rs
crates/sonictok/tests/: batch.rs  data_present.rs  fixtures.rs  oracle_diff.rs  proptest.rs
data/: cl100k_base.stb  llama3.special  llama3.stb  o200k_base.special  o200k_base.stb  o200k_harmony.special  o200k_harmony.stb  qwen3.special  qwen3.stb
docs/superpowers/: PROGRESS.md
docs/superpowers/plans/: 2026-06-16-sonictok-phase1-plan1-cl100k-foundation.md  2026-06-16-sonictok-phase1-plan2-o200k.md  2026-06-16-sonictok-phase1-plan3-optimization-ladder.md
docs/superpowers/specs/: 2026-06-16-sonictok-phase1-design.md
fixtures/: cl100k_base.json  llama3.json  manifest.json  o200k_base.json  o200k_harmony.json  qwen3.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_no_panic.rs  encode_no_panic.rs  oracle_diff.rs  roundtrip.rs
tools/: export_cl100k.py  export_llama3.py  export_o200k.py  export_qwen3.py  export_unicode.py  gen_fixtures.py  gen_fixtures_llama3.py  gen_fixtures_qwen3.py  import_tokenizer.py
xtask/: Cargo.toml
xtask/src/: main.rs
