[package]
name = "sonictok-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sonictok = { path = "../crates/sonictok" }
sonictok-testkit = { path = "../crates/sonictok-testkit" }

[[bin]]
name = "oracle_diff"
path = "fuzz_targets/oracle_diff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encode_no_panic"
path = "fuzz_targets/encode_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_no_panic"
path = "fuzz_targets/decode_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
