[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "sonictok"
version = "0.0.0"
requires-python = ">=3.9"
description = "Fast, exact BPE tokenizer (byte-identical to tiktoken)"
license = { text = "MIT" }
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "sonictok"
