[package]
name = "sonictok"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sonictok-core.workspace = true
sonictok-data.workspace = true
thiserror.workspace = true
rayon = { version = "1", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
# Embed the bundled vocab blobs into the binary so get_encoding works with no
# external data dir (used by the Python wheel / standalone deploys). ~7.4 MB.
embed-data = []

[dev-dependencies]
sonictok-core.workspace = true
sonictok-testkit.workspace = true
proptest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
criterion = { workspace = true }

[[bench]]
name = "encode"
harness = false
